--- a/template/404.html
+++ b/template/404.html
@@ -25,7 +25,7 @@
     <!-- TODO: Add a favicon -->
     <link rel="shortcut icon" href="assets/images/ico/fab.ico">
 
-    <title>Fickle - Dashboard</title>
+    <title>404 Error - Amaha Electricals</title>
 
     <!-- Plugin Css Put Here -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
