--- a/template/login.html
+++ b/template/login.html
@@ -78,8 +78,8 @@
                                 <li><a href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-linkedin"></i></a></li>
                                 <li><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-github"></i></a></li>
-                                <li><a href="javascript:void(0)"><i class="fa fa-bitbucket"></i></a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-youtube-play"></i></a></li>
+                                <li><a href="javascript:void(0)"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                             <!--<button class="btn ls-dark-btn rounded"><i class="fa fa-facebook"></i></button>
                             <button class="btn ls-dark-btn rounded"><i class="fa fa-twitter"></i></button>
