--- a/template/admin-dashboard.html
+++ b/template/admin-dashboard.html
@@ -115,48 +115,48 @@
         </a>
 
         <div class="dropdown-menu right top-notification">
-            <h4>Notification</h4>
+            <h4>Recently Published Posts</h4>
             <ul class="ls-feed">
                 <li>
                     <a href="javascript:void(0)">
                                         <span class="label label-red">
                                             <i class="fa fa-check white"></i>
                                         </span>
-                        You have 4 pending tasks.
+                        Please keep account of OT
                         <span class="date">Just now</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:void(0)">
-                                        <span class="label label-light-green">
-                                            <i class="fa fa-bar-chart-o"></i>
+                                        <span class="label label-red">
+                                            <i class="fa fa-check white"></i>
                                         </span>
-                        Finance Report for year 2013
+                        Safety Instructions Updated
                         <span class="date">30 min</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:void(0)">
-                                        <span class="label label-lightBlue">
-                                            <i class="fa fa-shopping-cart"></i>
+                                        <span class="label label-red">
+                                            <i class="fa fa-check white"></i>
                                         </span>
-                        New order received with
+                        New opportunities with amara
                         <span class="date">45 min</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:void(0)">
-                                        <span class="label label-lightBlue">
-                                            <i class="fa fa-user"></i>
+                                        <span class="label label-red">
+                                            <i class="fa fa-check white"></i>
                                         </span>
-                        5 pending membership
+                        Important instructions
                         <span class="date">50 min</span>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:void(0)">
                                         <span class="label label-red">
-                                            <i class="fa fa-bell"></i>
+                                            <i class="fa fa-check white"></i>
                                         </span>
                         Server hardware upgraded
                         <span class="date">1 hr</span>
@@ -164,8 +164,8 @@
                 </li>
                 <li>
                     <a href="javascript:void(0)">
-                                        <span class="label label-blue">
-                                            <i class="fa fa-briefcase"></i>
+                                        <span class="label label-red">
+                                            <i class="fa fa-check white"></i>
                                         </span>
                         IPO Report for
                         <span class="lightGreen">2014</span>
@@ -180,51 +180,13 @@
         <!--Notification drop down end-->
     </li>
     <li class="dropdown">
-        <!--Email drop down start-->
+        <!--user account start-->
         <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
-            <span class="fa fa-envelope-o"></span>
-            <span class="badge badge-red">3</span>
+            <span class="fa fa-user"></span>
         </a>
 
-        <div class="dropdown-menu right email-notification">
-            <h4>Email</h4>
-            <ul class="email-top">
-                <li>
-                    <a href="javascript:void(0)">
-                        <div class="email-top-image">
-                            <img class="rounded" src="assets/images/demo/avatar-80.png" alt="user image" />
-                        </div>
-                        <div class="email-top-content">
-                            John Doe <div>Sample Mail 1</div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)">
-                        <div class="email-top-image">
-                            <img class="rounded" src="assets/images/demo/avatar-80.png" alt="user image" />
-                        </div>
-                        <div class="email-top-content">
-                            John Doe <div>Sample Mail 2</div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="javascript:void(0)">
-                        <div class="email-top-image">
-                            <img class="rounded" src="assets/images/demo/avatar-80.png" alt="user image" />
-                        </div>
-                        <div class="email-top-content">
-                            John Doe <div> Sample Mail 4</div>
-                        </div>
-                    </a>
-                </li>
-                <li class="only-link">
-                    <a href="mail.html">View All</a>
-                </li>
-            </ul>
-        </div>
-        <!--Email drop down end-->
+
+        <!--user account-->
     </li>
     
     <li class="hidden-xs">
@@ -233,7 +195,7 @@
         </a>
     </li>
     <li>
-        <a href="lock-screen.html">
+        <a href="#">
             <i class="fa fa-lock"></i>
         </a>
     </li>
@@ -289,24 +251,41 @@
     <a href="#">
         <i class="fa fa-user"></i> <span>My Profile</span>
     </a>
+    <ul>
+        <li><a href="#">View Profile</a></li>
+        <li><a href="#">Edit Profile</a></li>
+    </ul>
 </li>
 <li>
     <a href="#">
         <i class="fa fa-group"></i> <span>Users</span> <span class="badge badge-red">58</span></a>
     </a>
+    <ul>
+        <li><a href="#">All Users</a></li>
+        <li><a href="#">Add Users</a></li>
+        <li><a href="#">Edit/Delete Users</a></li>
+    </ul>
 </li>
 <li>
     <a href="#">
         <i class="fa fa-building"></i>
         <span>Work Sites <span class="badge badge-red">15</span></span>
     </a>
-    
+    <ul>
+        <li><a href="#">View Work Sites</a></li>
+        <li><a href="#">Add New Sites</a></li>
+        <li><a href="#">Edit/Delete Sites</a></li>
+    </ul>
 </li>
 <li>
     <a href="#">
         <i class="fa fa-file"></i>
         <span>Posts</span>
     </a>
+    <ul>
+        <li><a href="#">Add New Post</a></li>
+        <li><a href="#">View All Posts</a></li>
+    </ul>
 </li>
 <li>
     <a href="#">
@@ -344,6 +323,10 @@
         <i class="fa fa-flag-o"></i>
         <span>Policies/Update</span> <span class="badge badge-red"> 15</span>
     </a>
+    <ul>
+        <li><a href="#">View All</a></li>
+        <li><a href="#">Add New Policy Update</a></li>
+    </ul>
 </li>
 <li>
     <a href="#">
@@ -388,7 +371,7 @@
         <!--Top breadcrumb start -->
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-home"></i></a></li>
-            <li class="active">Dashboard</li>
+            <li class="active">Admin Dashboard</li>
         </ol>
         <!--Top breadcrumb start -->
     </div>
@@ -552,8 +535,10 @@
 
 <div class="row home-row-top">
     <div class="col-md-4 col-sm-6">
+        <div class="contact_block white">
         <H2>CONTACT & LOCATION</H2>
         <p><strong>Amaha Electrical Inc.</strong><br/>Cohoes, New York<br/>1217 Loudon Road, Cohoes, New York 12047<br>Telephone (518) 782 7400<br>Fax (518) 782 0617<br>Email Support : <a href="#">Support@amahaelectricals.com</a><br/>Email Sales : <a href="#">Sales@amahaelectricals.com</a><br/>Email Safety : <a href="#">Safety@amahaelectricals.com</a></p>
+        </div>
     </div>
     <div class="col-md-4 col-sm-6">
         <div class="skyWeather label-light-green white">
