deleted the registration page
deleted the registration page and deleted the registration link from the
login page.

--- a/template/login.html
+++ b/template/login.html
@@ -133,7 +133,7 @@
                                     <i class="fa fa-rocket"></i> Send
                                 </button>
 
-                                <a class="login-view" href="javascript:void(0)">Login</a> & <a class="" href="registration.html">Registration</a>
+                                <a class="login-view" href="javascript:void(0)">Back To Login</a>
 
                             </div>
                         </form>
