updated user profile view page
updated user profile view page

--- a/template/user-profile.html
+++ b/template/user-profile.html
@@ -377,23 +377,33 @@
                     </div>
                     <div class="col-md-4 user-details">
                         <h2>John Doe</h2>
-                        <p>Designation : President</p>
+                        <p>Position/Job Title : President</p>
                         <p>User Role : Administrator</p>
                         <h3>Address</h3>
                         <address>
                             <i class="fa fa-map-marker"></i>
                             795 Folsom Ave, Suite 600<br>
-                            San Francisco, CA 94107<br>
-                            <i class="fa fa-mobile"></i> Phone: (123) 456-7890
+                            San Francisco, CA 94107<br>               
                         </address>
-                        <p>Account Created On : 10/10/2014<br>Emergency Contact Number : (123) 456-7890</p>
+                        <p><i class="fa fa-phone"></i> Phone (Home): (123) 456-7890</p>
+                        <p><i class="fa fa-mobile"></i> Phone (mobile): (123) 456-7890</p>
+                        <p>Account Created On : 10/10/2014</p>
+                        <p>Emergency Contact Number : (123) 456-7890</p>
+                        <p>Date Of Birth : 14/01/1986</p>
+                        <p>Name Of Spouse : Katy Perry</p>
+                        <p>Anniversary Date : 14/01/2014</p>
+
            
                     </div>
                     <div class="col-md-5 ls-user-details">
                         <h2>Date Of Joining: 10/10/2013</h2>
-                        <p><a href="#">Supervisor : Not Applicable</a></p>
+                        <p><a href="#">Supervisor : None</a></p>
                         <p>About : Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
                         <p><i class="fa fa-envelope"></i> Email: <a href="#">admin@amahaelectricals.com</a></p>
+                        <p>Disabilities : Diabetes</p>
+                        <p>Race : American Indian</p>
+                        <p>Gender : Male</p>
+                        <p>Veteran Status : Active duty wartime or campaign badge veteran:</p>
                         <div class="ls-user-links">
                                             <ul>
                                                 <!--List Start-->
@@ -680,5 +690,6 @@
 <script src="assets/js/jquery.amaran.js"></script>
 <!--AmaranJS library script End   -->
 <script src="assets/js/pages/dashboard.js"></script>
+
 </body>
 </html>
