edit profile page for users
profile page for the user to make the edits to their profile, once the
user will be added by admin and will be provided the user id and login
details, the user will be able to login and go to edit profile page and
update his/her profile.

--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -8357,8 +8357,41 @@ margin-top: 10px;
 margin-top: 25px;
 }
 
+.userform textarea{
+    height: 200px;
+}
 a {
 color: #FF7878;
 text-decoration: none;
 }
+
+form.ls_form label.radio{
+    margin-top: 0px;
+}
+
+.margint10{
+    margin-top: 20px;
+}
+
+.margint15{
+    margin-top: 15px;
+}
+
+.padtop5{
+    padding-top: 5px;
+}
+
+.padtop15{
+    padding-top: 15px;
+}
+
+.marginl15{
+    margin-left: 15px;
+}
+
+.veteran label {
+padding-top: 10px;
+}
+
+
 /*-----------------------------------------------------------------*/
