--- a/template/edit-profile.html
+++ b/template/edit-profile.html
@@ -386,7 +386,7 @@
                                     Profile</h3>
                                 </div>
 
-                                <div class="panel-body">
+                                <div class="">
                                     <form class="ls_form">
                                         <!--user profile form ends here-->
                                         <!--form section 1 starts here-->
@@ -835,7 +835,7 @@
                                         </div>
                                         <!--disabilities section ends here-->
 
-                                        <div class="col-md-12">
+                                        <div class="col-md-12 whitebox">
                                             <!--veteran status starts-->
 
                                             <h3>Veteran Status</h3>
@@ -861,7 +861,7 @@
                                                 "icheck-green" id=
                                                 "inlineCheckboxNew3" type=
                                                 "checkbox" value="option3">
-                                                <strong>Disabled Veteran:</strong> a veteran of
+                                                Disabled Veteran: a veteran of
                                                 the U.S. military, ground,
                                                 naval or air service who is
                                                 entitled to compensation (or
@@ -879,8 +879,8 @@
                                                 "icheck-green" id=
                                                 "inlineCheckboxNew3" type=
                                                 "checkbox" value="option3">
-                                                <strong>Active duty wartime or campaign
-                                                badge veteran:</strong> a veteran who
+                                                Active duty wartime or campaign
+                                                badge veteran: a veteran who
                                                 served on active duty in the
                                                 U.S. military, ground, naval,
                                                 or air service during a war, or
@@ -894,8 +894,8 @@
                                                 "icheck-green" id=
                                                 "inlineCheckboxNew3" type=
                                                 "checkbox" value="option3">
-                                                <strong>Armed forces service medal
-                                                veteran:</strong> a veteran who, while
+                                                Armed forces service medal
+                                                veteran: a veteran who, while
                                                 services on active duty in the
                                                 U.S. military, ground,naval, or
                                                 air service, participated in a
@@ -908,7 +908,7 @@
                                                 "icheck-green" id=
                                                 "inlineCheckboxNew3" type=
                                                 "checkbox" value="option3">
-                                                <strong>Recently separated veteran:</strong> a
+                                                Recently separated veteran:a
                                                 veteran who was discharged or
                                                 released from active duty in
                                                 the U.S. military,ground,
