--- a/template/user-profile.html
+++ b/template/user-profile.html
@@ -25,7 +25,7 @@
     <!-- TODO: Add a favicon -->
     <link rel="shortcut icon" href="assets/images/ico/fab.ico">
 
-    <title>Amaha Electricals - Dashboard</title>
+    <title>Amaha Electricals - User Profile</title>
 
     <!--Page loading plugin Start -->
     <link rel="stylesheet" href="assets/css/plugins/pace.css">
