--- a/template/edit-profile.html
+++ b/template/edit-profile.html
@@ -380,13 +380,13 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="panel panel-default userform">
-                                <div class="panel-heading">
+                            <div class="panel panel-default userform no-border">
+                                <div class="panel-heading ">
                                     <h3 class="panel-title">Update or Edit Your
                                     Profile</h3>
                                 </div>
 
-                                <div class="">
+                                <div class="panel-body">
                                     <form class="ls_form">
                                         <!--user profile form ends here-->
                                         <!--form section 1 starts here-->
